REM31 - migrate java 17->21